# console-calculator-Nummy

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
configs/: .clang-format  docs
include/Calculatable/: BinaryOperations.hpp  CalculatableMaker.hpp  CalculatableTree.hpp  ICalculatable.hpp  ICalculatableTree.hpp  Number.hpp  UnaryOperations.hpp
include/Core/: Application.hpp  BasicCalculator.hpp  CalculatorInitializer.hpp  FormatCalculator.hpp  ICalculator.hpp
include/ExpressionProcessing/: ExpressionTokenizer.hpp  ExpressionValidator.hpp  IExpressionTokenizer.hpp  IExpressionValidator.hpp
include/Formatter/: Formatter.hpp  IFormatter.hpp
include/Math/: ITokensManager.hpp  IVariablesManager.hpp  MathDictionary.hpp  Token.hpp  TokensManager.hpp  VariablesManager.hpp
src/: main.cpp
src/Calculatable/: CalculatableMaker.cpp  CalculatableTree.cpp
src/Core/: Application.cpp  BasicCalculator.cpp  CalculatorInitializer.cpp  FormatCalculator.cpp
src/ExpressionProcessing/: ExpressionTokenizer.cpp  ExpressionValidator.cpp
src/Formatter/: Formatter.cpp
src/Math/: TokensManager.cpp  VariablesManager.cpp
tests/: Application.cpp  BasicCalculator.cpp  CMakeLists.txt  CalculatableTree.cpp  ExpressionTokenizer.cpp  ExpressionValidator.cpp
